ActionCable needs Redis

--- a/etc/nginx-codenames.conf
+++ b/etc/nginx-codenames.conf
@@ -1,43 +1,54 @@
-upstream puma_codenames {
+upstream puma_codenames { 
   server unix:/home/cnames/codenames/shared/tmp/sockets/puma.sock fail_timeout=15;
 }
 
 server {
   listen 80;
-  server_name codenames.nordist.net;
-  root /home/cnames/codenames/current/public;
-  access_log /home/cnames/codenames/shared/log/nginx.access.log;
-  error_log /home/cnames/codenames/shared/log/nginx.error.log;
 
   client_max_body_size 4G;
   keepalive_timeout 10;
 
-  error_page 500 502 504 /500.html;
-  error_page 503 @503;
+  server_name codenames.nordist.net;
+
+  root        /home/cnames/codenames/current/public;
+  access_log  /home/cnames/codenames/shared/log/nginx.access.log;
+  error_log   /home/cnames/codenames/shared/log/nginx.error.log;
 
   location ^~ /assets/ {
-    gzip_static on;
+    #gzip_static on;
     expires max;
     add_header Cache-Control public;
   }
 
-  # these should always be served by nginx, and nginx should return the
-  # 404 if they don't exist (e.g. when the agent isn't quite started yet)
-  location @missing {
-      return 404;
-  }
-
   try_files $uri/index.html $uri @puma_codenames;
   location @puma_codenames {
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-    proxy_redirect off;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "Upgrade";
-    proxy_set_header X-Forwarded-Proto http;
-    proxy_pass http://puma_codenames;
-    # limit_req zone=one;
+    proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header   Host $host;
+    proxy_redirect     off;
+    proxy_pass         http://puma_codenames;
+
+    proxy_set_header   Upgrade $http_upgrade;
+    proxy_set_header   Connection "Upgrade";
+    proxy_set_header   X-Forwarded-Proto http;
+    # limit_req          zone=one;
   }
+
+  # FIXME could this be unified with @puma_codenames section?
+  location /cable {
+    proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header   Host $http_host;
+    proxy_redirect     off;
+    proxy_pass         http://puma_codenames;
+
+    proxy_http_version 1.1;
+    proxy_set_header   Upgrade $http_upgrade;
+    proxy_set_header   Connection "Upgrade";
+    proxy_set_header   X-Real-IP $remote_addr;
+    proxy_set_header   X-Forwarded-Proto http;
+  }
+
+  error_page 500 502 504 /500.html;
+  error_page 503 @503;
 
   location = /50x.html {
     root html;
