--- a/etc/nginx-codenames.conf
+++ b/etc/nginx-codenames.conf
@@ -32,6 +32,9 @@ server {
     proxy_set_header   Connection "Upgrade";
     proxy_set_header   X-Forwarded-Proto http;
     # limit_req          zone=one;
+    proxy_set_header   X-Forwarded-Ssl on; # Optional
+    proxy_set_header   X-Forwarded-Port $server_port;
+    proxy_set_header   X-Forwarded-Host $host;
   }
 
   # FIXME could this be unified with @puma_codenames section?
@@ -46,6 +49,10 @@ server {
     proxy_set_header   Connection "Upgrade";
     proxy_set_header   X-Real-IP $remote_addr;
     proxy_set_header   X-Forwarded-Proto http;
+
+    proxy_set_header   X-Forwarded-Ssl on; # Optional
+    proxy_set_header   X-Forwarded-Port $server_port;
+    proxy_set_header   X-Forwarded-Host $host;
   }
 
   error_page 500 502 504 /500.html;
