Redirect HTTP to HTTPS at Nginx layer

--- a/etc/nginx-codenames.conf
+++ b/etc/nginx-codenames.conf
@@ -4,12 +4,17 @@ upstream puma_codenames {
 
 server {
   listen 80;
+  server_name codenames.nordist.net;
+
+  return 301 https://codenames.nordist.net$request_uri;
+}
+
+server {
   listen 443 ssl;
+  server_name codenames.nordist.net;
 
   client_max_body_size 4G;
   keepalive_timeout 10;
-
-  server_name codenames.nordist.net;
 
   root        /home/cnames/codenames/current/public;
   access_log  /home/cnames/codenames/shared/log/nginx.access.log;
